# automl_tutorial

./: .gitignore  README.md  automl_platforms_comparison.ipynb  basic_automl.ipynb  main.py  optimal_training.ipynb  pyproject.toml  requirements.lock.txt  requirements.txt  training_example.ipynb
benchmark_models/: kolosal_model.pkl
catboost_1754477623.1727805/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_1754477623.1727805/learn/: events.out.tfevents
catboost_1754477623.1727805/test/: events.out.tfevents
catboost_1754479917.2672517/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_1754479917.2672517/learn/: events.out.tfevents
catboost_1754479917.2672517/test/: events.out.tfevents
catboost_1754480282.7540429/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_1754480282.7540429/learn/: events.out.tfevents
catboost_1754480282.7540429/test/: events.out.tfevents
catboost_1754485545.4570127/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_1754485545.4570127/learn/: events.out.tfevents
catboost_1754485545.4570127/test/: events.out.tfevents
