[project]
name = "automl-tutorial"
version = "0.1.0"
authors = [{name = "Evint", email = "evint@example.com"}]
description = "Tutorial for Kolosal AutoML"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kolosal_automl"]
include_package_data = true
zip_safe = false
[tool.setuptools.package-data]
"kolosal_automl" = ["*.yaml", "*.json", "*.csv", "*.txt", "*.md"]
[tool.setuptools.scripts]
kolosal_automl = "kolosal_automl.__main__:main"
